[tool.poetry]
name = "binancealpha"
version = "0.1.0"
description = "Python 项目"
authors = ["Oxmoei <https://t.me/cryptostar210>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = ">=3.8.0"
requests = ">=2.28.0"
httpx = ">=0.24.0"
pandas = ">=1.5.0"
numpy = ">=1.21.0"
matplotlib = ">=3.5.0"
pillow = ">=9.0.0"
python-dotenv = ">=0.19.0"
aiohttp-socks = ">=0.7.0"
pydantic = ">=1.10.0"
tenacity = ">=8.0.0"
ujson = ">=5.0.0"
pyyaml = ">=6.0"
colorlog = ">=6.0.0"
tqdm = ">=4.64.0"
regex = ">=2022.0.0"
python-dateutil = ">=2.8.0"
pathlib2 = ">=2.3.0"
urllib3 = ">=1.26.0"
cerberus = ">=1.3.0"
diskcache = ">=5.0.0"
cachetools = ">=5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
